<?xml version="1.0" encoding="utf-8"?>
<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome_back"
        android:textSize="20sp"
        android:layout_margin="20dp"
       />
    <EditText
        android:id="@+id/et_email"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:hint="@string/enter_message_email"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:padding="5dp"/>
    <EditText
        android:id ="@+id/et_password"
        android:layout_width="match_parent"
        android:hint="@string/enter_message_password"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:padding="5dp"/>
    <Button
        android:id="@+id/button_login"
        android:layout_width="wrap_content"
        android:text="@string/login_now"
        android:layout_gravity="center"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/tv_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/not_register"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:textColor="@color/colorAccent"
        />
</LinearLayout>